--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,14 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-jar-plugin</artifactId>
+			    <version>2.3.2</version>
+			    <configuration>
+			        <finalName>docker-jenkins-integration</finalName>                   
+			    </configuration>
+			</plugin> 
 		</plugins>
 	</build>
 
